Use http instead of https for ogp service